# sensecritiq

./: .gitignore  .railwayignore  CLAUDE.md  requirements.txt
.railway/: config.json
backend/: .env.example  alembic.ini  config.py  main.py  requirements.txt  test_pipeline.py
backend/alembic/: env.py
backend/alembic/versions/: 20260309_1303_8025934f58e3_initial_schema.py
backend/api/: billing.py  chat.py  keys.py  portal.py  sessions.py  stubs.py
backend/middleware/: auth.py  internal.py
backend/migrations/: phase2_schema.sql
backend/models/: __init__.py  account.py  api_key.py  session.py  usage_log.py
backend/reports/: e0e0efdc-47c9-4a90-9565-7ebcb5549735.md
backend/services/: report.py  storage.py  synthesis.py
backend/uploads/: da250273-e169-4249-9783-b400fd3a7aca.m4a
backend/workers/: pipeline.py
mcp-server/: .mcpregistry_registry_token  README.md  pyproject.toml  server.json  server.py
