[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensecritiq-mcp"
version = "0.1.1"
description = "MCP server for SenseCritiq — UX research synthesis agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]
mcpName = "io.github.salvisare/sensecritiq"

[project.urls]
Homepage = "https://sensecritiq.com"
Repository = "https://github.com/salvis-are/sensecritiq"

[project.scripts]
sensecritiq-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
